--- a/_config.yml
+++ b/_config.yml
@@ -32,13 +32,12 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://blog.csdn.net/JamesZhou13?spm=1018.2226.3001.5343" # "http://orcid.org/yourorcidurl"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
-  csdn             : "https://blog.csdn.net/JamesZhou13?spm=1018.2226.3001.5343"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
