--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,15 @@
 # prevent it from being included in the site.
 
 main:
+  - title: "Projects"
+    url: /projects
+
+  - title: "Algorithm Competetions"
+    url: /algorithm/
+  
+  - title: "Blog Posts"
+    url: /blog/
+  
   - title: "Publications"
     url: /publications/
 
