--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,31 +6,31 @@
 
 main:
   - title: "Projects"
-    url: /projects
+    url: /projects/
 
-  - title: "Algorithm Competetions"
-    url: /algorithm/
-  
+  - title: "Algorithms"
+    url: /algorithms/
+
   - title: "Blog Posts"
     url: /blog/
-  
+
   - title: "Publications"
     url: /publications/
 
   - title: "Talks"
-    url: /talks/    
+    url: /talks/
 
   - title: "Teaching"
-    url: /teaching/    
-    
+    url: /teaching/
+
   - title: "Portfolio"
     url: /portfolio/
-        
+
   - title: "Blog Posts"
     url: /year-archive/
-    
+
   - title: "CV"
     url: /cv/
-    
+
   # - title: "Guide"
   #   url: /markdown/
