show titles in algorithms page

--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ author:
   xiaohongshu      : "https://www.xiaohongshu.com/user/profile/63051068000000000f004d60"
 
 # Algorithm Category - The following the list of Algorithm categories and their headings
-algorithms_category:
+algorithm_category:
   templates:
     title: 'Templates'
   competitions:
