--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "James Zhou"
   pronouns         : # example: "she/her"
-  bio              : "Master Degree candidate in Computer Technology of Beijing University of Posts and Telecommunications (BUPT)"
+  bio              : "Master Degree Candidate in Computer Technology of Beijing University of Posts and Telecommunications (BUPT)"
   location         : "Beijing, China"
   employer         : "BUPT"
   uri              : # URL
