--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Algorithms"
     url: /algorithms/
 
-  - title: "Blogs"
-    url: /blogs/
+  # - title: "Blogs"
+  #   url: /blogs/
 
   # - title: "Publications"
   #   url: /publications/
